# myelectricaldatapy

./: .gitignore  .pre-commit-config.yaml  README.md  _secrets.yaml  example.py  myelectricaldatapy.code-workspace  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: auto-approve.yml  lint.yml  python-lint.yml  python-publish.yml  pythonpackage.yml  pythonpublish.yml  release.yml
myelectricaldatapy/: __init__.py  analytics.py  auth.py  const.py  exceptions.py  myelectricaldata.py  mypdl.py
tests/: __init__.py  conftest.py  consts.py  test_analytics.py  test_load_data.py
tests/fixtures/: access.json  address.json  contract.json  daily.json  detail.json  ecowatt.json  invalid_access.json  tempo.json
