[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "myelectricaldatapy"
version     = "replace_by_workflow"
license     = {text = "GPL-3"}
description = "Fetch Linky data from myelectricaldata.fr"
readme      = "README.md"
authors     = [
    {name = "Cyr-ius", email = "cyr-ius@ipocus.net"}
]
keywords    = ["enedis", "linky", "async", "myelectricaldata"]
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Home Automation",
]
requires-python = ">=3.10.0"
dependencies    = [
    "aiohttp>=3.8.1",
    "pandas==2.0.2",
    "voluptuous==0.13.1",
]

[tool.setuptools]
platforms = ["any"]
zip-safe  = false
include-package-data = true

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "dangerous-default-value",
    "invalid-name",
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
