[build-system]
requires = ["setuptools","setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "myelectricaldatapy"
dynamic     = ["version"]
license     = "GPL-3.0-or-later"
description = "Fetch Linky data from myelectricaldata.fr"
readme      = "README.md"
authors     = [
    {name = "Cyr-ius", email = "cyr-ius@ipocus.net"}
]
keywords    = ["enedis", "linky", "async", "myelectricaldata"]
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
]
requires-python = ">=3.10.0"
dependencies    = [
    "aiohttp>=3.8.1",
    "pandas>=2.0.2",
    "voluptuous>=0.13.1",
]

[project.optional-dependencies]
dev = [
    "prek",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/cyr-ius/myelectricaldatapy"

[tool.setuptools_scm]

[tool.setuptools]
platforms = ["any"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = false

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true
